dropshot/tests/fail/bad_endpoint16.stderr
error: endpoint `bad_endpoint` has an invalid content type
       note: supported content types are: application/json, application/x-www-form-urlencoded, multipart/form-data
  --> tests/fail/bad_endpoint16.rs:12:5
   |
12 | /     method = GET,
13 | |     path = "/test",
14 | |     content_type = "foo/bar",
   | |_____________________________^
